--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,8 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+//  Media Queries  \\
+
 @media screen and (max-width: 1096px) {
   .carousel-cell {
     width: 31%;
