Add proper alt text, change color to hex

--- a/src/partials/90_footer.html
+++ b/src/partials/90_footer.html
@@ -48,7 +48,7 @@
           <img
             class="payment-image"
             src="./images/cards.png"
-            alt="payment-card-image"
+            alt="Available payment methods: Visa, MasterCard, Discover, American Express and PayPal"
           />
         </div>
       </div>
