--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@ $header-bg: #723636;
 
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
-$footer-text: rgb(169, 169, 169);
+$footer-text: #a9a9a9;
 
 $primary: #d58e32;
 $white: #fff;
