--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,9 @@ $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
+$white: #fff;
 
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+$dot-bg: #e1e1e1;
