--- a/src/sass/components/_blog-slider.scss
+++ b/src/sass/components/_blog-slider.scss
@@ -14,8 +14,8 @@
     margin: 0;
     list-style: none;
     line-height: 1;
-    padding: 0 0 0 1rem;
-    background-color: #ffffff;
+    padding-left: 1rem;
+    background-color: $white;
 
     .dot {
       display: inline-block;
@@ -25,7 +25,7 @@
       width: 13px;
       height: 13px;
       border-radius: 6px;
-      background-color: #e1e1e1;
+      background-color: $dot-bg;
 
       &.active,
       &:hover {
