--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,7 +18,7 @@
 @import "components/post-box";
 @import "components/product-box";
 
-@import "components/section--blog-posts";
+@import "components/blog-slider";
 @import "components/section--features";
 
 body {
