Fix commented issues

--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -5,18 +5,14 @@
         class="carousel wrap"
         data-flickity="{&quot;pageDots&quot;: false, &quot;groupCells&quot;: &quot;100%&quot;, &quot;cellAlign&quot;: &quot;center&quot;, &quot;contain&quot;: true, &quot;wrapAround&quot;: true }"
       >
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
-        <div class="carousel-cell brand-1"></div>
-        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
       </div>
     </div>
   </div>
