--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,3 +13,4 @@ $form-border-color: #292929;
 $brands-border-color: #e1e1e1;
 $brands-chevron-color: #fff;
 $brands-buttons-color: #2a2a2a;
+$brands-buttons-fill: #fff;
