--- a/src/sass/components/_section-brands.scss
+++ b/src/sass/components/_section-brands.scss
@@ -3,17 +3,22 @@
 }
 
 .carousel-cell {
-  width: 150px;
-  height: 100px;
-  border: 1px solid $brands-border-color;
   margin: 0 10px;
+  width: 150px;
+}
+
+.brand-photo {
+  width: 100%;
+  height: 100px;
   background-size: cover;
   background-position: center center;
+  border: 1px solid $brands-border-color;
 }
 
 .brand-1 {
   background-image: url("../images/placeholder-1.jpeg");
 }
+
 .brand-2 {
   background-image: url("../images/placeholder-2.png");
 }
@@ -41,12 +46,13 @@
 }
 
 .flickity-button-icon {
-  fill: white;
+  fill: $brands-buttons-fill;
 }
 
 .flickity-prev-next-button.previous {
   left: 0;
 }
+
 .flickity-prev-next-button.next {
   right: 0;
 }
