--- a/src/sass/components/_section-brands.scss
+++ b/src/sass/components/_section-brands.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100px;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   border: 1px solid $brands-border-color;
 }
 
