--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -57,7 +57,7 @@
             <i class="fas fa-list-ul"></i>
             <ul>
               <li class="dropdown">
-                <div class="col-offset-2">
+                <div class="mt-2">
                   <a
                     href="#"
                     data-toggle="dropdown"
