--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,11 +5,11 @@ $white: #fff;
 $black: #000;
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
-$featured-phoneNumber: rgb(216, 216, 216);
-$featured-cardCounter: rgb(224, 227, 237);
-$featured-menuBar: rgba(1, 2, 2, 0.2);
+$featured-phone-number: rgb(216, 216, 216);
+$featured-card-counter: rgb(224, 227, 237);
+$featured-menu-bar: rgba(1, 2, 2, 0.2);
 $featured-box: #b6b6b6;
-$featured-booxContent: rgb(42, 42, 42);
+$featured-content: rgb(42, 42, 42);
 $primary: #d58e32;
 $text-hover: #fff;
 $text-color: #2a2a2a;
@@ -18,8 +18,8 @@ $text-color: #2a2a2a;
 $form-border-color: #292929;
 $menu-categoryUl: #b07324;
 
-//
-$featured-cartCouter: translate(50%, -50%);
+// Transform
+$featured-couter: translate(50%, -50%);
 
 //Grid
 $grid-base: 10px;
