--- a/src/sass/fontawesome/_mixins.scss
+++ b/src/sass/fontawesome/_mixins.scss
@@ -83,8 +83,9 @@
 
 //braekpoint
 
+// Medium devices (tablets, 768px and up)
 @mixin medium-up {
-  @media(min-width: #{$bp-medium}) {
+  @media (min-width: #{$bp-medium}) {
     @content;
   }
 }
