Fix issue with section & name variables

--- a/src/partials/40_section-promotion.html
+++ b/src/partials/40_section-promotion.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 image">
-        <div class="promotion-box__photo">
-          <div class="promotion-box--overlay">
+        <div class="promotion-box__photo mw-100">
+          <div class="promotion-box__overlay">
             <div class="promotion-box__content">
               <h4>Guest Room</h4>
               <h3>SOFA</h3>
@@ -13,16 +13,15 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6 promotion-box__site">
-        <div class="promotion-box_box">
-          <div class="promotion-box-images">
+        <div class="promotion-box__box">
+          <div class="promotion-box__images">
             <div class="col-xs-12 col-md-2 image">
-              <img src="images/s-promotion/furniture3.png" alt="furniture-wallOne" />
+              <img src="images/s-promotion/furniture3.png" alt="furniture comfort" />
             </div>
-            <div class="col-xs-12 col-md-2"></div>
             <div class="col-xs-12 col-md-2 image">
               <img
                 src="images/s-promotion/furniture-promo2.png"
-                alt="furniture-wallOne"
+                alt="furniture comfort"
               />
             </div>
           </div>
