--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,4 @@
-//Kolory
+//Colors
 $header-topbar-bg: #864343;
 $header-bg: #723636;
 $white: #fff;
@@ -10,7 +10,7 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 $form-border-color: #292929;
 $gray-light: #666;
-//Tekst
+//Text
 $font-base-size: 1rem; //16px
 $font-size-1: $font-base-size * 3; //~48px
 $font-size-2: $font-base-size * 1.5; //24px
@@ -28,7 +28,7 @@ $line-height-lg: 1.8;
 $grid-base: 10px;
 $gutter: $grid-base * 1.5;
 
-//Zaokoglenie
+//Circle
 $border-radius: $grid-base * 0.5;
 
 //Breakpoint
