--- a/src/sass/components/_promotion-box.scss
+++ b/src/sass/components/_promotion-box.scss
@@ -7,6 +7,12 @@
       position: center;
       repeat: no-repeat;
     }
+    width: 100%;
+    max-height: $grid-base * 20;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
   }
 
   &__site {
@@ -15,14 +21,16 @@
     left: -$grid-base * 1.5;
   }
 
-  &--overlay {
-    @include centererPos();
-    color: white;
+  &__overlay {
+    color: $white;
     background: $gray-light;
     opacity: 0.7;
     width: 90%;
+    height: 90%;
     padding: 3% 0;
-    z-index: 1000;
+    position: absolute;
+    top: $grid-base * 2;
+    z-index: 1;
   }
 
   &__content {
@@ -34,17 +42,25 @@
   &__rate {
     display: block;
     border: 1px solid;
-    padding: $grid-base - 5;
+    padding: 5px;
     font-size: $grid-base * 2.5;
     text-align: center;
+    @include medium-small {
+      width: 51%;
+    }
     width: 31%;
   }
 }
 
 .image {
   img {
+    @include medium-high2 {
+      margin-bottom: $grid-base * 3;
+    }
+    @include mobile {
+      margin: 0.5rem auto;
+    }
     width: $grid-base * 32;
-    margin-bottom: $grid-base * 3.2;
     position: relative;
     top: -4px;
   }
@@ -52,8 +68,15 @@
 
 .partial_photo {
   position: relative;
-  padding: 31% 0;
-  top: $grid-base * 1.2;
+  @include large-up {
+    padding: 31% 0;
+  }
+
+  @include medium-small {
+    padding: 51% 0;
+  }
+  padding: 37% 0;
+  top: $grid-base;
   overflow: hidden;
   align-items: flex-end;
 }
