--- a/src/sass/fontawesome/_mixins.scss
+++ b/src/sass/fontawesome/_mixins.scss
@@ -87,6 +87,13 @@
   }
 }
 
+@mixin mobile {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+
 @mixin medium-high {
   @media (min-width: 992px)  and (max-width: 1199px )  {
     @content;
