--- a/src/partials/20_section-promote.html
+++ b/src/partials/20_section-promote.html
@@ -14,7 +14,7 @@
             <img
               src="https://secure.img1-fg.wfcdn.com/im/68010059/resize-h505-w505%5Ecompr-r85/3034/30347531/Rogersville+Armchair.jpg"
               class="hot-deals__photo"
-              alt="promotedProduct"
+              alt="chair"
             />
             <div class="counter">
               <span class="counter__value">25 days</span>
@@ -24,7 +24,7 @@
             </div>
             <div class="buttons">
               <a href="#" class="btn-main-small hot-deals__button"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                ><i class="fa fa-shopping-basket"></i>add to cart</a
               >
             </div>
             <div class="content">
@@ -53,7 +53,7 @@
           <img
             class="distinguish__image"
             src="https://pl.sofacompany.com/media/catalog/product/cache/d13c0f82f8ebfb04d96519ed59bc94be/0/7/074803042117_Front_1.jpg"
-            alt="distinguishProduct"
+            alt="sofa"
           />
           <div class="overlay">
             <h2 class="overlay__header">indoor</h2>
