--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -6,14 +6,17 @@ header {
       list-style: none;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
 
       li {
         display: block;
-        line-height: $grid-base * 5;
+        padding: $grid-base 0;
 
         a {
           color: $white;
-          font-size: $grid-base * 1.3;
+          font-size: $font-size-6;
 
           &:hover {
             color: $primary;
@@ -50,13 +53,13 @@ header {
     .phone-number {
       p {
         margin: 0;
-        font-size: 17px;
-        line-height: 42px;
+        font-size: $font-size-4 + 1;
+        padding: $grid-base * 4.2 0;
         color: $featured-phone-number;
         font-weight: 500;
 
         i {
-          font-size: $grid-base * 3;
+          font-size: $font-size-7 * 3;
           color: $primary;
           vertical-align: middle;
           margin-top: -3px;
@@ -79,7 +82,7 @@ header {
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: $grid-base * 2;
+          font-size: $font-size-7 * 2;
 
           i {
             margin-right: 5px;
@@ -94,7 +97,7 @@ header {
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: $grid-base * 1.4;
+          font-size: $font-size-7 * 1.4;
           color: $featured-card-counter;
           position: absolute;
           top: 50%;
@@ -142,7 +145,7 @@ header {
           a {
             color: $text-color;
             text-transform: uppercase;
-            font-size: $grid-base * 1.2;
+            font-size: $font-size-6;
             padding: 1rem;
             text-decoration: none;
             display: flex;
@@ -207,21 +210,14 @@ header {
 
           &:hover {
             @include medium-up {
-              transition: all 150ms linear;
+              @include transition(all 150ms linear);
               outline: none;
             }
           }
 
           &:active {
-            -webkit-text-shadow: 0 0 2px white;
-            -moz-text-shadow: 0 0 2px white;
-            -o-text-shadow: 0 0 2px white;
-            -ms-text-shadow: 0 0 2px white;
-            -webkit-transition: all 150ms linear;
-            -moz-transition: all 150ms linear;
-            -ms-transition: all 150ms linear;
-            -o-transition: all 150ms linear;
-            transition: all 150ms linear;
+            @include box-shadow(0, 0, 2px, 0, $white);
+            @include transition(all 150ms linear);
           }
         }
 
@@ -241,7 +237,7 @@ header {
           position: absolute;
           top: 100%;
           left: 0;
-          background: $menu-categoryUl;
+          background: $menu-category;
           padding: 0;
           z-index: 2;
 
