--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -134,7 +134,7 @@
 }
 
 @include media-breakpoint-down(sm) {
-  .panel-bar {
+  .section--products {
     .heading {
       margin-bottom: 20px;
     }
