--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -34,13 +34,13 @@
   <div class="company-claim">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col text-left phone-number">
+        <div class="col col-xs-12 col-md-4 text-left phone-number">
           <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
         </div>
-        <div class="col text-center">
+        <div class="col col-xs-12 col-md-4 text-center">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
-        <div class="col text-right cart">
+        <div class="col col-xs-12 col-md-4 text-right cart">
           <a href="#" class="cart-box">
             <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
             <div class="cart-counter"><span class="cart-counter__value">0</span></div>
