--- a/src/sass/components/_promote.scss
+++ b/src/sass/components/_promote.scss
@@ -69,6 +69,10 @@
     left: 35%;
     display: none;
   }
+
+  //    &__carousel {
+  //        max-height: 400px;
+  //    }
 }
 
 .distinguish {
@@ -96,6 +100,9 @@
     background-color: $text-color;
     color: $text-hover;
     font-size: 26px;
+    &:focus {
+      outline: none;
+    }
 
     @media not all and (hover: none) {
       &:hover {
@@ -106,7 +113,7 @@
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, .45);
+  background-color: rgba(0, 0, 0, 0.45);
   position: absolute;
   top: 35%;
   width: 100%;
@@ -166,3 +173,8 @@
 .buttons {
   text-transform: uppercase;
 }
+
+//.carousel-cell {
+//    max-height: 100%;
+//    max-width: 100%;
+//}
