--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -78,19 +78,19 @@ header {
       color: $white;
 
       .cart-counter {
-        width: 28px;
-        height: 27px;
+        width: $grid-base * 2.8;
+        height: $grid-base * 2.7;
         border-radius: 14px;
         background-color: $header-bg;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 14px;
+        font-size: $font-size-5;
         color: $cart-counter;
         position: absolute;
         top: 50%;
         right: 0;
-        transform: translate(50%, -50%);
+        transform: $featured-couter;
       }
 
       &:hover {
@@ -339,12 +339,12 @@ header {
     }
 
     .phone-number {
-      font-size: 14px;
+      font-size: $font-size-5;
       text-align: right;
 
       &-wrapper {
         position: absolute;
-        right: 15px;
+        right: $grid-base * 1.5;
         bottom: 0;
         padding: 0;
       }
@@ -352,8 +352,8 @@ header {
 
     .cart {
       position: relative;
-      top: -15px;
-      right: 15px;
+      top: -$grid-base * 1.5;
+      right: $grid-base * 1.5;
     }
   }
 }
@@ -372,7 +372,7 @@ header {
   }
 
   .user-menu__item {
-    width: 13px;
+    width: $grid-base * 1.3;
     overflow: hidden;
     white-space: nowrap;
 
