--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -14,14 +14,16 @@
         </div>
       </div>
     </div>
-    <div class="products-carousel">
+    <div class="products-slider">
       <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -35,7 +37,9 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
@@ -47,7 +51,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -73,7 +79,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -87,7 +95,9 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
@@ -99,33 +109,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3 carousel-cell">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -151,7 +137,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -177,7 +165,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -203,7 +193,37 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 carousel-cell">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
