--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,7 +15,7 @@ $primary: #d58e32;
 $white: #fff;
 
 $text-hover: #fff;
-
+$post-info: rgb(103, 103, 103);
 $text-color: #2a2a2a;
 
 $product-box-bg: #fff;
