--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,8 @@ $header-topbar-bg: #864343;
 $header-bg: #723636;
 $cart-counter: #e0e3ed;
 $phone-number: #d8d8d8;
-
+$featured-color: #b6b6b6;
+$featurd-content: rgb(42, 42, 42);
 $white: #fff;
 $white-light: #f4f5f7;
 $black: #000;
@@ -13,13 +14,12 @@ $footer-text: #a9a9a9;
 
 $primary: #d58e32;
 $white: #fff;
-
+$menu-bar:  rgba(1, 2, 2, .2);
 $text-hover: #fff;
 
 $text-color: #2a2a2a;
 
 $product-box-bg: #fff;
-
 $form-border-color: #292929;
 $gray-light: #666;
 
@@ -32,6 +32,16 @@ $font-size-4: $font-base-size * 1; //16px
 $font-size-5: $font-base-size * 0.875; //14px
 $font-size-6: $font-base-size * 0.75; //12px
 $font-size-7: $font-base-size * 0.625; //10px
+$font-size-8: 13px;
+$font-size-9: 17px;
+$font-size-10: 32px;
+
+// Transfrom
+$feature-icon: translateY(-50%);
+$featured-transform: translate(-50%, -50%);
+$cart-transform: translate(50%, -50%);
+
+// line height
 
 $line-height-base: 1.5;
 $line-height-sm: 1.2;
