--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,11 +9,11 @@ header {
 
       li {
         display: inline-block;
-        line-height: 55px;
+        padding: $grid-base 0;
 
         a {
           color: $white;
-          font-size: 13px;
+          font-size: $font-size-8;
 
           &:hover {
             color: $primary;
@@ -44,23 +44,23 @@ header {
     background-color: $header-bg;
 
     .container > .row {
-      height: 145px;
+      height: $grid-base * 14.5;
     }
   }
 
   .phone-number {
     margin: 0;
-    font-size: 17px;
-    line-height: 42px;
+    font-size: $font-size-8;
+    padding: $grid-base 0;
     color: $phone-number;
     font-weight: 500;
 
     i {
-      font-size: 32px;
+      font-size:$font-size-9;
       color: $primary;
       vertical-align: middle;
       margin-top: -3px;
-      margin-right: 0.8rem;
+      margin-right: .8rem;
     }
   }
 
@@ -71,18 +71,18 @@ header {
       color: $white;
       
       @media screen and (max-width: 600px) {
-        left: -22px;
+        left: -$grid-base * 2.2;
       }
       
       .cart-icon {
         background-color: $primary;
-        width: 55px;
-        height: 50px;
+        width: $grid-base * 5.5;
+        height: $grid-base * 5;
         border-radius: 3px;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 20px;
+        font-size: $grid-base * 2;
 
         i {
           margin-right: 5px;
@@ -90,19 +90,19 @@ header {
       }
 
       .cart-counter {
-        width: 28px;
-        height: 27px;
-        border-radius: 14px;
+        width: $grid-base * 2.8;
+        height: $grid-base * 2.7;
+        border-radius: $grid-base * 1.4;
         background-color: $header-bg;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 14px;
+        font-size: $font-size-5;
         color: $cart-counter;
         position: absolute;
         top: 50%;
         right: 0;
-        transform: translate(50%, -50%);
+        transform: $cart-transform;
       }
 
       &:hover {
@@ -114,11 +114,11 @@ header {
   }
 
   .menu-bar {
-    box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
+    box-shadow: 2px 3.464px 6px $menu-bar;
     background-color: $white;
 
     .container > .row {
-      height: 84px;
+      height: $grid-base * 8.4;
     }
 
     .menu {
@@ -138,7 +138,7 @@ header {
           a {
             color: $text-color;
             text-transform: uppercase;
-            font-size: 12px;
+            font-size: $font-size-6;
             padding: 1rem;
             text-decoration: none;
             display: flex;
@@ -165,7 +165,7 @@ header {
     .search-form {
       border: 1px solid $form-border-color;
       display: inline-flex;
-      height: 45px;
+      height: $grid-base * 4.5;
       color: $text-color;
 
       .category {
@@ -177,13 +177,13 @@ header {
         i:first-child {
           color: $primary;
           position: absolute;
-          left: 10px;
+          left: $grid-base;
           z-index: 0;
         }
 
         i:last-child {
           position: absolute;
-          right: 10px;
+          right: $grid-base;
           z-index: 0;
         }
 
@@ -192,8 +192,8 @@ header {
           border: 0;
           background-color: transparent;
           outline: none;
-          padding: 5px 30px 5px 35px;
-          font-size: 14px;
+          padding: 5px $grid-base *3 5px $grid-base * 3.5;
+          font-size: $font-size-5;
           position: relative;
           z-index: 1;
         }
@@ -206,8 +206,8 @@ header {
 
         input {
           border: 0;
-          padding-left: 10px;
-          font-size: 14px;
+          padding-left: $grid-base;
+          font-size: $font-size-5;
           outline: none;
 
           &::placeholder {
@@ -232,12 +232,12 @@ header {
     }
 
     .phone-number {
-      font-size: 14px;
+      font-size: $font-size-5;
       text-align: right;
 
       &-wrapper {
         position: absolute;
-        right: 15px;
+        right: $grid-base * 1.5;
         bottom: 0;
         padding: 0;
       }
@@ -245,8 +245,8 @@ header {
 
     .cart {
       position: relative;
-      top: -15px;
-      right: 15px;
+      top: -$grid-base * 1.5;
+      right: $grid-base * 1.5;
     }
   }
 }
@@ -265,7 +265,7 @@ header {
   }
 
   .user-menu__item {
-    width: 13px;
+    width: $grid-base * 1.3;
     overflow: hidden;
     white-space: nowrap;
 
