add 2 sliders in promote section

--- a/src/partials/20_section-promote.html
+++ b/src/partials/20_section-promote.html
@@ -6,8 +6,9 @@
           <div class="hot-deals__header">
             <h4 class="hot-deals__header-text">hot deals</h4>
             <div class="hot-deals__dots">
-              <span class="hot-deals__dot"></span> <span class="hot-deals__dot"></span>
-              <span class="hot-deals__dot"></span>
+              <span class="hot-deals__dot active" role="button"></span>
+              <span class="hot-deals__dot" role="button"></span>
+              <span class="hot-deals__dot" role="button"></span>
             </div>
           </div>
           <div class="hot-deals-slider">
@@ -136,11 +137,29 @@
       </div>
       <div class="col-8">
         <div class="distinguish">
-          <img
-            class="distinguish__image"
-            src="https://pl.sofacompany.com/media/catalog/product/cache/d13c0f82f8ebfb04d96519ed59bc94be/0/7/074803042117_Front_1.jpg"
-            alt="sofa"
-          />
+          <div class="distinguish-slider">
+            <div class="carousel-cell">
+              <img
+                class="distinguish__image"
+                src="https://pl.sofacompany.com/media/catalog/product/cache/d13c0f82f8ebfb04d96519ed59bc94be/0/7/074803042117_Front_1.jpg"
+                alt="sofa"
+              />
+            </div>
+            <div class="carousel-cell">
+              <img
+                src="https://cb2.scene7.com/is/image/CB2/AndesBedQueenAcaciaLLSHS16_16x9/?$web_zoom_furn_hero$&160718121019&wid=1008&hei=567"
+                alt="bed"
+                class="distinguish__image"
+              />
+            </div>
+            <div class="carousel-cell">
+              <img
+                src="https://www.dakohome.co.uk/media/catalog/product/cache/2/image/550x500/9df78eab33525d08d6e5fb8d27136e95/b/r/brema_white_800x600.jpg"
+                alt="wardrobe"
+                class="distinguish__image"
+              />
+            </div>
+          </div>
           <div class="overlay">
             <h2 class="overlay__header">indoor</h2>
             <h2 class="overlay__header overlay__header--bold">furniture</h2>
@@ -156,6 +175,3 @@
     </div>
   </div>
 </div>
-
-<div class="carousel-cell"><img src="" class="hot-deals__photo" alt="chair" /></div>
-<div class="carousel-cell"><img src="" class="hot-deals__photo" alt="chair" /></div>
