--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -65,7 +65,7 @@ header {
     }
   }
 
-  <<<<<<< head .cart {
+  .cart {
     .cart-box {
       display: inline-block;
       position: relative;
