--- a/src/partials/80_section-feadback.html
+++ b/src/partials/80_section-feadback.html
@@ -7,7 +7,7 @@
             <div class="col-auto heading"><h3>Client feadback</h3></div>
             <div class="col"></div>
             <div class="col-auto dots">
-              <ul class="flickity-button-iconOne" id="sliaders">
+              <ul class="flickity-button-icon" id="sliaders">
                 <li class="dot active" data-move="0"></li>
                 <li class="dot" data-move="1"></li>
                 <li class="dot" data-move="2"></li>
