Change filckity init to run from sliders.js

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -2,28 +2,28 @@
   <div class="top-bar">
     <div class="container">
       <div class="row">
-        <div class="col text-left">
+        <div class="col-auto text-left">
           <ul>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">USD <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">English <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">Help <i class="fas fa-caret-down"></i></a>
             </li>
           </ul>
         </div>
         <div class="col text-right">
-          <ul>
-            <li>
+          <ul class="user-menu__list">
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-user"></i> Login</a>
             </li>
-            <li>
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-lock"></i> Register</a>
             </li>
-            <li>
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-bars"></i></a>
             </li>
           </ul>
@@ -34,8 +34,10 @@
   <div class="company-claim">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col text-left phone-number">
-          <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
+        <div class="col text-left phone-number-wrapper">
+          <p class="phone-number">
+            <i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222
+          </p>
         </div>
         <div class="col text-center">
           <a href="#"><img src="./images/logo.png"/></a>
@@ -43,7 +45,7 @@
         <div class="col text-right cart">
           <a href="#" class="cart-box">
             <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
-            <div class="cart-counter">0</div>
+            <div class="cart-counter"><span class="cart-counter__value">0</span></div>
           </a>
         </div>
       </div>
