--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -1,10 +1,9 @@
 <div class="section--brands">
   <div class="container">
     <div class="brands-panel">
-      <div
-        class="carousel wrap"
-        data-flickity="{&quot;pageDots&quot;: false, &quot;groupCells&quot;: &quot;100%&quot;, &quot;cellAlign&quot;: &quot;center&quot;, &quot;contain&quot;: true, &quot;wrapAround&quot;: true }"
-      >
+      <div class="carousel brands-slider">
+        <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
+        <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
         <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
         <div class="carousel-cell"><div class="brand-photo brand-2"></div></div>
         <div class="carousel-cell"><div class="brand-photo brand-1"></div></div>
