--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,7 +1,11 @@
 .product-box {
-  background-color: #ffffff;
+  background-color: $product-box-bg;
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
+
+  &:hover .no-hover {
+    background: $primary;
+  }
 
   .photo {
     position: relative;
@@ -29,6 +33,11 @@
     .buttons {
       display: flex;
       justify-content: space-between;
+      opacity: 0;
+    }
+
+    &:hover .buttons {
+      opacity: 1;
     }
   }
 
