--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -55,31 +55,17 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col">
-          <nav id="myCategory" class="category">
-            <i class="fas fa-list-ul"></i>
-            <ul>
-              <li class="dropdown">
-                <div class="mt-2">
-                  <a
-                    href="#"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Select a category</a
-                  >
-                  <i class="fas fa-caret-down"></i>
-                </div>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a href="#">Free HTML</a></li>
-                  <li><a href="#">Free CSS</a></li>
-                  <li><a href="#">Free JavaScript</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div class="col">
           <form action="" class="search-form">
+            <div class="category">
+              <i class="fas fa-list-ul"></i>
+              <select name="category-shop" id="category">
+                <option>Select a category</option>
+                <option value="Free HTML">Free HTML</option>
+                <option value="Free CSS">Free CSS</option>
+                <option value="Free JavaScript">Free JavaScript</option>
+              </select>
+              <i class="fas fa-caret-down"></i>
+            </div>
             <div class="search-field">
               <input placeholder="Search products..." type="text" />
               <button><i class="fa fa-search"></i></button>
